--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 03 11:28:46 IRST 2026
-sdk.dir=D\:\\sdk
+#Sun Jan 04 08:25:15 IRST 2026
+sdk.dir=E\:\\Android-Tools\\sdk\\sdk
